# rag-llamaindex

./: README.md  docker-compose.yaml  main.py  pyproject.toml
data/: README.md
data/knowledge_base/: Doc_Filler_1.md  Doc_Filler_10.md  Doc_Filler_11.md  Doc_Filler_12.md  Doc_Filler_13.md  Doc_Filler_14.md  Doc_Filler_15.md  Doc_Filler_16.md  Doc_Filler_17.md  Doc_Filler_18.md  Doc_Filler_19.md  Doc_Filler_2.md  Doc_Filler_20.md  Doc_Filler_21.md  Doc_Filler_22.md  Doc_Filler_23.md  Doc_Filler_24.md  Doc_Filler_3.md  Doc_Filler_4.md  Doc_Filler_5.md  Doc_Filler_6.md  Doc_Filler_7.md  Doc_Filler_8.md  Doc_Filler_9.md  HR_Remote_Work_2024_Archive.md  HR_Remote_Work_2026_Advanced.md  HR_policy_2024.md  HR_policy_2026.md  Holiday_Schedule.md  IT_Zero_Trust_2026.md  Meeting_Atlas_Security_2026.md  Meeting_Notes_Corp.md  Procurement_Device_Catalog_2026.md  Project_Atlas_Graph_2026.md  Project_Red_Eye.md  Security_Passwords.md
llamaindex/: README.md  advanced_rag_llamaindex_demo.py  rag_llamaindex_demo.py
notebooks/: 01_rag_workshop.ipynb  rag_workshop.ipynb
scripts/: check_services.py  generate_data.py
